--- a/css/common.css
+++ b/css/common.css
@@ -206,7 +206,7 @@ a {
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
   background-color: var(--accent-color);
-  border-color: var(--accent-color);
+  border: none;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -243,11 +243,113 @@ a {
 
   width: 528px;
   height: 581px;
+  padding: 40px;
 
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+.modal h2{
+  margin: 0;
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+.field-with-icon{
+  position: relative;
+}
+
+.form-field{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 4px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+}
+
+.form-field input,
+.form-field textarea{
+  display: block;
+  height: 40px;
+  margin-bottom: 10px;
+  padding-left: 42px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-field textarea{
+  height: 120px;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  resize: none;
+}
+
+.form-field input:focus,
+.form-field textarea:focus{
+  outline: none;
+  border: 1px solid var(--accent-color);
+}
+
+.modal-icon{
+  position: absolute;
+  top: 28px;
+  left: 14px;
+}
+
+.field-with-icon:focus-within .modal-icon{
+  fill: var(--accent-color);
+}
+
+.policy-terms,
+.policy-link{
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71px;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.policy-link{
+  text-decoration: underline;
+  color: var(--accent-color);
+}
+
+.button-submit{
+  display: block;
+  margin: auto;
+  width: 200px;
+  height: 50px;
+  margin-top: 30px;
+  padding: 10px 55px;
+
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+
+  font-style: normal;
+  font-weight: 700 ;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--primary-white-color);
+
+  cursor: pointer;
 }
 
 .button-closed {
@@ -263,6 +365,13 @@ a {
   background-color: #fff;
   background-size: 11px;
   cursor: pointer;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-closed:hover,
+.button-closed:focus{
+  fill: var(--accent-color);
 }
 
 /*Особенности*/
@@ -651,6 +760,7 @@ a {
     text-align: center;
     letter-spacing: 0.06em;
     color: var(--primary-white-color);
+    cursor: pointer;
 }
 
 .email-form svg{margin-left: 10px;}
