--- a/css/common.css
+++ b/css/common.css
@@ -19,7 +19,6 @@ body {
   max-width: 1230px;
   padding-left: 15px;
   padding-right: 15px;
-  outline: red 1px solid;
 }
 
 /*Шапка сайта*/
@@ -325,6 +324,7 @@ a {
   line-height: 1.71px;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+  cursor: pointer;
 }
 
 .policy-link{
@@ -358,7 +358,7 @@ a {
   background-size: cover;
   border: 2px solid var(--accent-color);
   border-radius: 1px;
-  
+  cursor: pointer;
 }
 
 .checkbox-policy:focus + .policy-label::before{
@@ -790,6 +790,7 @@ a {
 .email-form input{
     display: block;
     margin-right: 12px;
+    padding-left: 16px;
     width: 358px;
     height: 50px;
 
