--- a/css/common.css
+++ b/css/common.css
@@ -16,9 +16,7 @@ body {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1230px;
-  padding-left: 15px;
-  padding-right: 15px;
+  max-width: 1170px;
 }
 
 /*Шапка сайта*/
@@ -692,8 +690,6 @@ a {
   display: flex;
 }
 
-.left-side-footer{margin-left: 15px;}
-
 .bottom-logo {
   color: #ffffff;
 }
@@ -789,7 +785,7 @@ a {
 .email-form{
     position: absolute;
     top: 0;
-    right: 30px;
+    right: 0px;
     margin-top: 12px;
 }
 
@@ -894,6 +890,7 @@ a {
 .projects {
   display: flex;
   flex-wrap: wrap;
+  padding-left: 0;
 }
 
 .projects .project-item {
